--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Clock</title>
+    <title>Video Display</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,41 +12,20 @@
             background-color: #222;
             color: white;
         }
-        #clock {
-            font-size: 48px;
-            font-weight: bold;
-            margin-top: 20px;
-        }
-        /* Style for video container */
-        #video-container {
-            margin-top: 20px;
-        }
         video {
-            max-width: 100%;
+            width: 80%; /* Adjust the width as needed */
             height: auto;
+            border: 5px solid white;
         }
     </style>
 </head>
 <body>
-    <h1>Current Time</h1>
-    <div id="clock">Loading...</div>
+    <h1>My Video</h1>
 
-    <!-- Video Section -->
-    <div id="video-container">
-        <video width="640" height="360" controls autoplay>
-            <source src="IMG_2073.MOV" type="video/quicktime">
-            Your browser does not support the video tag.
-        </video>
-    </div>
-
-    <script>
-        function updateClock() {
-            const now = new Date();
-            const timeString = now.toLocaleTimeString();
-            document.getElementById('clock').innerText = timeString;
-        }
-        setInterval(updateClock, 1000);
-        updateClock(); // Call once immediately
-    </script>
+    <!-- Video Embed -->
+    <video controls autoplay>
+        <source src="IMG_2073.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </body>
 </html>
