--- a/index.html
+++ b/index.html
@@ -26,16 +26,12 @@
     </style>
 </head>
 <body>
-    <h1>My Video</h1>
-
-    <!-- Local Video Embed -->
-    <video controls autoplay>
-        <source src="IMG_2073.MOV" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-
-    <!-- YouTube Video Embed -->
+  eo Embed with clean UI -->
     <h2>Watch this YouTube Video</h2>
-    <iframe src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&vq=hd1080" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe 
+        src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&controls=0&modestbranding=1&rel=0&vq=hd1080" 
+        allow="autoplay; encrypted-media" 
+        allowfullscreen>
+    </iframe>
 </body>
 </html>
