--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
     </style>
 </head>
 <body>
-  eo Embed with clean UI -->
+    <h1>My Video</h1>
+
+    <!-- Local Video Embed -->
+   
+
+    <!-- YouTube Video Embed with clean UI -->
     <h2>Watch this YouTube Video</h2>
     <iframe 
         src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&controls=0&modestbranding=1&rel=0&vq=hd1080" 
