--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
             background-color: #222;
             color: white;
         }
-        video {
-            width: 60%; /* Smaller video size */
-            height: auto;
-            border: 5px solid white;
-            margin-bottom: 30px; /* Space between videos */
-        }
         iframe {
             width: 80%; /* Adjust size for YouTube video */
             height: 450px;
@@ -26,15 +20,10 @@
     </style>
 </head>
 <body>
-    <h1>My Video</h1>
-
-    <!-- Local Video Embed -->
-   
-
     <!-- YouTube Video Embed with clean UI -->
     <h2>Watch this YouTube Video</h2>
     <iframe 
-        src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&controls=0&modestbranding=1&rel=0&vq=hd1080" 
+        src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&controls=0&modestbranding=1&rel=0&showinfo=0&vq=hd1080" 
         allow="autoplay; encrypted-media" 
         allowfullscreen>
     </iframe>
