--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
             background-color: #222;
             color: white;
         }
+        video {
+            width: 60%; /* Smaller video size */
+            height: auto;
+            border: 5px solid white;
+            margin-bottom: 30px; /* Space between videos */
+        }
         iframe {
             width: 80%; /* Adjust size for YouTube video */
             height: 450px;
@@ -20,6 +26,10 @@
     </style>
 </head>
 <body>
+    <h1>My Video</h1>
+
+    <!-- Local Video Embed -->
+ 
     <!-- YouTube Video Embed with clean UI -->
     <h2>Watch this YouTube Video</h2>
     <iframe 
