--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
     </style>
 </head>
 <body>
-    <h1>My Video</h1>
+   
 
-    <!-- Local Video Embed -->
- 
-    <!-- YouTube Video Embed with clean UI -->
+    <!-- YouTube Video Embed with minimal UI -->
     <h2>Watch this YouTube Video</h2>
     <iframe 
         src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&controls=0&modestbranding=1&rel=0&showinfo=0&vq=hd1080" 
