--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             border: 5px solid white;
             margin-bottom: 30px; /* Space between videos */
         }
-        iframe {
+        #youtube-video {
             width: 80%; /* Adjust size for YouTube video */
             height: 450px;
             border: none;
@@ -26,14 +26,37 @@
     </style>
 </head>
 <body>
-   
+    <h1>My Video</h1>
 
-    <!-- YouTube Video Embed with minimal UI -->
+   
+    <!-- YouTube Video Embed with Player API -->
     <h2>Watch this YouTube Video</h2>
-    <iframe 
-        src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&controls=0&modestbranding=1&rel=0&showinfo=0&vq=hd1080" 
-        allow="autoplay; encrypted-media" 
-        allowfullscreen>
-    </iframe>
+    <div id="youtube-video"></div> <!-- Placeholder for YouTube video -->
+
+    <!-- Load YouTube Player API -->
+    <script src="https://www.youtube.com/iframe_api"></script>
+
+    <script>
+        // This will be called once the YouTube API is ready
+        function onYouTubeIframeAPIReady() {
+            var player = new YT.Player('youtube-video', {
+                videoId: 'gCRiJX9diWE', // YouTube video ID
+                playerVars: {
+                    autoplay: 1,         // Auto-play the video
+                    controls: 0,         // Hide controls (play, pause, etc.)
+                    modestbranding: 1,   // Hide YouTube logo
+                    showinfo: 0,         // Hide title
+                    rel: 0,              // Don't show related videos at the end
+                    start: 51,           // Start from 51 seconds
+                    vq: 'hd1080',        // Set video quality to 1080p
+                },
+                events: {
+                    onReady: function(event) {
+                        event.target.playVideo(); // Start video as soon as player is ready
+                    }
+                }
+            });
+        }
+    </script>
 </body>
 </html>
