--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Video Hover Effect</title>
+    <title>YouTube Video with Hover Effect</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,7 +30,7 @@
         }
 
         .video-container:hover iframe {
-            transform: scale(1.1); /* Crop the top and bottom when hovered */
+            transform: scale(1.3); /* Stronger zoom effect */
         }
 
         .video-container iframe {
@@ -47,10 +47,6 @@
             src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&vq=hd1080&modestbranding=1&controls=0&showinfo=0&rel=0"
             frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
-
-    <script>
-        // JavaScript (if needed, for any further customization)
-    </script>
 
 </body>
 </html>
