--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
 
         .video-container:hover iframe {
-            transform: scale(1.3); /* Stronger zoom effect */
+            transform: scale(1.3); /* Zoom in more by increasing the scale value */
         }
 
         .video-container iframe {
@@ -47,6 +47,10 @@
             src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&vq=hd1080&modestbranding=1&controls=0&showinfo=0&rel=0"
             frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
+
+    <script>
+        // JavaScript (if needed, for any further customization)
+    </script>
 
 </body>
 </html>
