--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         iframe {
             width: 100%;
             height: 450px; /* Adjust the height */
-            transition: transform 0.3s ease-in-out;
+            transition: transform 0s ease-in-out; /* Remove transition delay */
         }
 
         .video-container:hover iframe {
