--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
         iframe {
             width: 100%;
             height: 450px; /* Adjust the height */
-            transition: transform 0s ease-in-out; /* Remove transition delay */
         }
 
         .video-container:hover iframe {
-            transform: scale(1.3); /* Zoom in more by increasing the scale value */
+            transform: scale(1.3); /* Zoom in instantly */
         }
 
         .video-container iframe {
