--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         iframe {
             width: 100%;
             height: 450px; /* Adjust the height */
-            transition: transform 1s ease; /* Smooth transition for zooming out */
+            transition: transform 0.5s ease; /* Smooth transition for zooming out */
         }
 
         .video-container:hover iframe {
@@ -45,12 +45,22 @@
 
     <div class="video-container">
         <iframe 
+            id="video-frame"
             src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&vq=hd1080&modestbranding=1&controls=0&showinfo=0&rel=0"
             frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
     <script>
-        // JavaScript (if needed, for any further customization)
+        // Set initial zoom on page load
+        window.onload = function() {
+            const videoFrame = document.getElementById('video-frame');
+            videoFrame.style.transform = 'scale(1.3)'; // Zoom in initially
+
+            // After 10 seconds, return to normal state and allow hover effect
+            setTimeout(function() {
+                videoFrame.style.transition = 'transform 0.5s ease'; // Enable smooth transition for zooming out
+            }, 10000); // 10000ms = 10 seconds
+        };
     </script>
 
 </body>
