--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
         // Set initial zoom on page load
         window.onload = function() {
             const videoFrame = document.getElementById('video-frame');
-            videoFrame.style.transform = 'scale(5)'; // Zoom in initially
+            
+            // Set the zoomed-in state initially
+            videoFrame.style.transform = 'scale(1.3)'; // Zoom in initially
 
-            // After 10 seconds, return to normal state and allow hover effect
+            // After 10 seconds, return to normal state
             setTimeout(function() {
-                videoFrame.style.transition = 'transform 0.5s ease'; // Enable smooth transition for zooming out
+                videoFrame.style.transform = 'scale(1)'; // Reset to normal scale
+                videoFrame.style.transition = 'transform 0.5s ease'; // Enable smooth zoom out transition
             }, 10000); // 10000ms = 10 seconds
         };
     </script>
