--- a/index.html
+++ b/index.html
@@ -51,17 +51,20 @@
     </div>
 
     <script>
-        // Set initial zoom on page load
         window.onload = function() {
             const videoFrame = document.getElementById('video-frame');
             
             // Set the zoomed-in state initially
             videoFrame.style.transform = 'scale(1.3)'; // Zoom in initially
 
-            // After 10 seconds, return to normal state
+            // After 10 seconds, return to normal state and enable hover effect
             setTimeout(function() {
                 videoFrame.style.transform = 'scale(1)'; // Reset to normal scale
                 videoFrame.style.transition = 'transform 0.5s ease'; // Enable smooth zoom out transition
+
+                // Enable hover effect after 10 seconds
+                const videoContainer = document.querySelector('.video-container');
+                videoContainer.style.pointerEvents = 'auto'; // Allow hover effect after 10 seconds
             }, 10000); // 10000ms = 10 seconds
         };
     </script>
