--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             overflow: hidden;
             margin: 20px auto;
             border-radius: 10px;
+            pointer-events: none; /* Disable hover effect initially */
         }
 
         iframe {
