--- a/index.html
+++ b/index.html
@@ -54,18 +54,19 @@
     <script>
         window.onload = function() {
             const videoFrame = document.getElementById('video-frame');
-            
-            // Set the zoomed-in state initially
-            videoFrame.style.transform = 'scale(1.3)'; // Zoom in initially
+            const videoContainer = document.querySelector('.video-container');
 
-            // After 10 seconds, return to normal state and enable hover effect
+            // Initially zoom the video in
+            videoFrame.style.transform = 'scale(1.3)';
+            videoFrame.style.transition = 'none'; // No transition for the initial zoom
+
+            // After 10 seconds, go back to normal scale and allow hover effect
             setTimeout(function() {
-                videoFrame.style.transform = 'scale(1)'; // Reset to normal scale
-                videoFrame.style.transition = 'transform 0.5s ease'; // Enable smooth zoom out transition
+                videoFrame.style.transform = 'scale(1)'; // Return to normal size
+                videoFrame.style.transition = 'transform 0.5s ease'; // Smooth transition back to normal
 
                 // Enable hover effect after 10 seconds
-                const videoContainer = document.querySelector('.video-container');
-                videoContainer.style.pointerEvents = 'auto'; // Allow hover effect after 10 seconds
+                videoContainer.style.pointerEvents = 'auto'; // Enable hover effect
             }, 10000); // 10000ms = 10 seconds
         };
     </script>
