--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             overflow: hidden;
             margin: 20px auto;
             border-radius: 10px;
-            pointer-events: none; /* Disable hover effect initially */
         }
 
         iframe {
@@ -60,13 +59,16 @@
             videoFrame.style.transform = 'scale(1.3)';
             videoFrame.style.transition = 'none'; // No transition for the initial zoom
 
-            // After 10 seconds, go back to normal scale and allow hover effect
+            // Disable interactions with the iframe for the initial 10 seconds
+            videoFrame.style.pointerEvents = 'none';
+
+            // After 10 seconds, go back to normal scale and allow hover effect and interactions
             setTimeout(function() {
                 videoFrame.style.transform = 'scale(1)'; // Return to normal size
                 videoFrame.style.transition = 'transform 0.5s ease'; // Smooth transition back to normal
 
-                // Enable hover effect after 10 seconds
-                videoContainer.style.pointerEvents = 'auto'; // Enable hover effect
+                // Enable hover effect and interaction with the video after 10 seconds
+                videoFrame.style.pointerEvents = 'auto'; // Enable hover effect
             }, 10000); // 10000ms = 10 seconds
         };
     </script>
