--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>YouTube Video with Hover Effect</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,9 +41,9 @@
 </head>
 <body>
 
-   
+    <h1>YouTube Video with Hover Effect</h1>
 
-     <div class="video-container">
+    <div class="video-container">
         <iframe 
             src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&vq=hd1080&modestbranding=1&controls=0&showinfo=0&rel=0"
             frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
