--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="video-container">
         <iframe 
-            src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&vq=hd1080&modestbranding=1&controls=0&showinfo=0&rel=0"
+            src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&mute=1&vq=hd1080&modestbranding=1&controls=0&showinfo=0&rel=0"
             frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
