--- a/index.html
+++ b/index.html
@@ -43,14 +43,49 @@
 
     <h1>YouTube Video with Hover Effect</h1>
 
-    <div class="video-container">
-        <iframe 
-            src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&mute=1&vq=hd1080&modestbranding=1&controls=0&showinfo=0&rel=0&loop=1&playlist=gCRiJX9diWE"
-            frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <div class="video-container" id="video-container">
+        <!-- The YouTube iframe will be dynamically inserted here -->
     </div>
 
     <script>
-        // JavaScript (if needed, for any further customization)
+        // This function creates the YouTube Player API
+        function onYouTubePlayerAPIReady() {
+            // Create the player with specific options
+            player = new YT.Player('video-container', {
+                height: '450',
+                width: '100%',
+                videoId: 'gCRiJX9diWE',
+                playerVars: {
+                    'autoplay': 1,
+                    'mute': 1,
+                    'start': 51,
+                    'vq': 'hd1080',
+                    'modestbranding': 1,
+                    'controls': 0,
+                    'showinfo': 0,
+                    'rel': 0,
+                    'loop': 1,
+                    'playlist': 'gCRiJX9diWE',
+                },
+                events: {
+                    'onStateChange': onPlayerStateChange,
+                }
+            });
+        }
+
+        // This function is triggered when the player state changes
+        function onPlayerStateChange(event) {
+            // If the video ends (state 0), seek back to 51 seconds
+            if (event.data == YT.PlayerState.ENDED) {
+                player.seekTo(51, true); // Seek to 51 seconds immediately
+            }
+        }
+
+        // Load the YouTube API script
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
     </script>
 
 </body>
