--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     'showinfo': 0,
                     'rel': 0,
                     'loop': 1,
-                    'playlist': 'gCRiJX9diWE',
+                    'playlist': 'gCRiJX9diWE',  // Ensure the video loops
                 },
                 events: {
                     'onStateChange': onPlayerStateChange,
