--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         .video-container {
             position: relative;
-            width: 80%; /* Adjust the width */
+            width: 80%;
             max-width: 800px;
             overflow: hidden;
             margin: 20px auto;
@@ -25,8 +25,8 @@
 
         iframe {
             width: 100%;
-            height: 450px; /* Adjust the height */
-            transition: transform 0.5s ease; /* Smooth transition for zooming out */
+            height: 450px; 
+            transition: transform 0.2s ease-in-out; /* Zoom in and out effect */
         }
 
         /* Zoom effect on hover */
@@ -34,7 +34,8 @@
             transform: scale(1.3); /* Zoom in instantly */
         }
 
-        .video-container iframe {
+        /* Video player customization */
+        iframe {
             border: none;
         }
     </style>
@@ -44,7 +45,7 @@
     <h1>YouTube Video with Hover Effect</h1>
 
     <div class="video-container" id="video-container">
-        <!-- The YouTube iframe will be dynamically inserted here -->
+        <!-- YouTube iframe will be inserted dynamically here -->
     </div>
 
     <script>
