--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Video with Hover Effect</title>
+    <title>YouTube Video with Hover Zoom Effect</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,7 +16,7 @@
 
         .video-container {
             position: relative;
-            width: 80%; /* Adjust the width */
+            width: 80%;
             max-width: 800px;
             overflow: hidden;
             margin: 20px auto;
@@ -25,16 +25,17 @@
 
         iframe {
             width: 100%;
-            height: 450px; /* Adjust the height */
-            transition: transform 0.5s ease; /* Smooth transition for zooming out */
+            height: 450px; 
+            transition: transform 0.2s ease-in-out; /* Zoom in and out effect */
         }
 
+        /* Zoom effect on hover */
         .video-container:hover iframe {
             transform: scale(1.3); /* Zoom in instantly */
-            transition: none; /* Instant zoom-in without transition */
         }
 
-        .video-container iframe {
+        /* Video player customization */
+        iframe {
             border: none;
         }
     </style>
@@ -43,14 +44,60 @@
 
     <h1>YouTube Video with Hover Effect</h1>
 
-    <div class="video-container">
-        <iframe 
-            src="https://www.youtube.com/embed/gCRiJX9diWE?start=51&autoplay=1&mute=1&vq=hd1080&modestbranding=1&controls=0&showinfo=0&rel=0"
-            frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <div class="video-container" id="video-container">
+        <!-- YouTube iframe will be inserted dynamically here -->
     </div>
 
     <script>
-        // JavaScript (if needed, for any further customization)
+        // This function creates the YouTube Player API
+        function onYouTubePlayerAPIReady() {
+            // Create the player with specific options
+            player = new YT.Player('video-container', {
+                height: '450',
+                width: '100%',
+                videoId: 'gCRiJX9diWE',
+                playerVars: {
+                    'autoplay': 1,
+                    'mute': 1,
+                    'start': 51,
+                    'vq': 'hd1080',
+                    'modestbranding': 1,
+                    'controls': 0,
+                    'showinfo': 0,
+                    'rel': 0,
+                    'loop': 1,
+                    'playlist': 'gCRiJX9diWE',  // Ensure the video loops
+                },
+                events: {
+                    'onStateChange': onPlayerStateChange,
+                }
+            });
+        }
+
+        // This function is triggered when the player state changes
+        function onPlayerStateChange(event) {
+            // If the video ends (state 0), seek back to 51 seconds
+            if (event.data == YT.PlayerState.ENDED) {
+                player.seekTo(51, true); // Seek to 51 seconds immediately
+            }
+        }
+
+        // Load the YouTube API script
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+        // Add the zoom effect on hover
+        document.getElementById('video-container').addEventListener('mouseover', function () {
+            var iframe = this.querySelector('iframe');
+            iframe.style.transform = 'scale(1.3)'; // Zoom in
+        });
+
+        document.getElementById('video-container').addEventListener('mouseout', function () {
+            var iframe = this.querySelector('iframe');
+            iframe.style.transform = 'scale(1)'; // Zoom out slowly
+        });
     </script>
 
 </body>
