--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             // If the video ends (state 0), seek back to 51 seconds
             if (event.data == YT.PlayerState.ENDED) {
                 player.seekTo(51, true); // Seek to 51 seconds immediately
+                player.playVideo(); // Start playing the video again
             }
         }
 
