--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     'autoplay': 1,
                     'mute': 1,
                     'start': 51,
+                    'end': 55,
                     'vq': 'hd1080',
                     'modestbranding': 1,
                     'controls': 0,
