--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Video with Hover Zoom Effect</title>
+    <title>YouTube Video with Overlay</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,20 +18,15 @@
             position: relative;
             width: 80%;
             max-width: 800px;
-            overflow: hidden;
             margin: 20px auto;
             border-radius: 10px;
+            overflow: hidden;
         }
 
         iframe {
             width: 100%;
-            height: 450px; 
-            transition: transform 0.2s ease-in-out; /* Zoom in and out effect */
-        }
-
-        /* Zoom effect on hover */
-        .video-container:hover iframe {
-            transform: scale(1.3); /* Zoom in instantly */
+            height: 450px;
+            border: none;
         }
 
         /* Invisible overlay to block cursor interaction */
@@ -48,7 +43,7 @@
 </head>
 <body>
 
-    <h1>YouTube Video with Hover Effect</h1>
+    <h1>YouTube Video with Overlay</h1>
 
     <div class="video-container" id="video-container">
         <div class="overlay"></div>  <!-- This blocks cursor interaction -->
@@ -57,7 +52,6 @@
     <script>
         // This function creates the YouTube Player API
         function onYouTubePlayerAPIReady() {
-            // Create the player with specific options
             player = new YT.Player('video-container', {
                 height: '450',
                 width: '100%',
@@ -72,7 +66,7 @@
                     'showinfo': 0,
                     'rel': 0,
                     'loop': 1,
-                    'playlist': 'gCRiJX9diWE',  // Ensure the video loops
+                    'playlist': 'gCRiJX9diWE',
                 },
                 events: {
                     'onStateChange': onPlayerStateChange,
@@ -80,11 +74,10 @@
             });
         }
 
-        // This function is triggered when the player state changes
+        // Replay the video when it ends
         function onPlayerStateChange(event) {
-            // If the video ends (state 0), seek back to 51 seconds
             if (event.data == YT.PlayerState.ENDED) {
-                player.seekTo(51, true); // Seek to 51 seconds immediately
+                player.seekTo(51, true);
             }
         }
 
