--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Video with Overlay</title>
+    <title>YouTube Video with Full Cursor Block</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,6 +21,7 @@
             margin: 20px auto;
             border-radius: 10px;
             overflow: hidden;
+            pointer-events: none; /* Completely disables cursor interaction */
         }
 
         iframe {
@@ -28,29 +29,17 @@
             height: 450px;
             border: none;
         }
-
-        /* Invisible overlay to block cursor interaction */
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: transparent; /* Fully invisible */
-            z-index: 2;
-        }
     </style>
 </head>
 <body>
 
-    <h1>YouTube Video with Overlay</h1>
+    <h1>YouTube Video with Full Cursor Block</h1>
 
     <div class="video-container" id="video-container">
-        <div class="overlay"></div>  <!-- This blocks cursor interaction -->
+        <!-- YouTube iframe will be inserted dynamically -->
     </div>
 
     <script>
-        // This function creates the YouTube Player API
         function onYouTubePlayerAPIReady() {
             player = new YT.Player('video-container', {
                 height: '450',
@@ -74,14 +63,12 @@
             });
         }
 
-        // Replay the video when it ends
         function onPlayerStateChange(event) {
             if (event.data == YT.PlayerState.ENDED) {
                 player.seekTo(51, true);
             }
         }
 
-        // Load the YouTube API script
         var tag = document.createElement('script');
         tag.src = "https://www.youtube.com/iframe_api";
         var firstScriptTag = document.getElementsByTagName('script')[0];
