--- a/index.html
+++ b/index.html
@@ -4,42 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multi YouTube Video Wall</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #000
-            color: white;
-            margin: 0;
-            padding: 20px;
-        }
-
-        .video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 10px;
-            justify-content: center;
-            align-items: center;
-            max-width: 1200px;
-            margin: auto;
-        }
-
-        .video-container {
-            position: relative;
-            width: 100%;
-            padding-top: 56.25%; /* 16:9 Aspect Ratio */
-            overflow: hidden;
-            border-radius: 10px;
-        }
-
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>YouTube Video Wall</h1>
@@ -66,5 +31,7 @@
             <iframe src="https://www.youtube.com/embed/viGMZx2rMgg?autoplay=1&mute=1&start=0&loop=1&playlist=viGMZx2rMgg&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
