--- a/index.html
+++ b/index.html
@@ -3,35 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi YouTube Video Wall</title>
+    <title>Image Gallery from Google Drive</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>YouTube Video Wall</h1>
-    <div class="video-grid">
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/gCRiJX9diWE?autoplay=1&mute=1&start=51&loop=1&playlist=gCRiJX9diWE&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/05oIYdNqY4o?autoplay=1&mute=1&start=0&loop=1&playlist=05oIYdNqY4o&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-        <!-- <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/CGzFF4s9H50?autoplay=1&mute=1&start=0&loop=1&playlist=CGzFF4s9H50&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/9tBHsSD0GAk?autoplay=1&mute=1&start=5&loop=1&playlist=9tBHsSD0GAk&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/FPaTv98wUsE?autoplay=1&mute=1&start=0&loop=1&playlist=FPaTv98wUsE&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/Z52vVsMdBkc?autoplay=1&mute=1&start=0&loop=1&playlist=Z52vVsMdBkc&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/viGMZx2rMgg?autoplay=1&mute=1&start=0&loop=1&playlist=viGMZx2rMgg&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div> -->
-    </div>
 
+    <h1>Google Drive Image Gallery</h1>
+    <div class="gallery" id="gallery"></div>
+
+    <script src="https://apis.google.com/js/api.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
